--- a/workspace/WeAC/src/main/res/values/styles.xml
+++ b/workspace/WeAC/src/main/res/values/styles.xml
@@ -31,6 +31,8 @@
     <style name="action_title">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingLeft">19dp</item>
+        <item name="android:paddingRight">19dp</item>
         <item name="android:layout_centerInParent">true</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="android:alpha">0.8</item>
