wea day 2 before williamChart

--- a/workspace/WeAC/src/main/res/values/color.xml
+++ b/workspace/WeAC/src/main/res/values/color.xml
@@ -3,8 +3,14 @@
 
     <color name="white">#FFFFFF</color>
     <!-- 白色 -->
+    <color name="white_trans10">#1affffff</color>
+    <!-- 白色:10 -->
+    <color name="white_trans20">#33ffffff</color>
+    <!-- 白色:20 -->
     <color name="white_trans60">#99FFFFFF</color>
     <!-- 白色:60 -->
+    <color name="white_trans90">#e6ffffff</color>
+    <!-- 白色:90 -->
     <color name="black">#000000</color>
     <!-- 黑色 -->
     <color name="black_trans15">#26000000</color>
