--- a/workspace/WeAC/src/main/res/drawable/shape_circle_promt.xml
+++ b/workspace/WeAC/src/main/res/drawable/shape_circle_promt.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" >
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners android:radius="20dp" />
 
-    <solid android:color="#1affffff" />
+<solid android:color="@color/white_trans10" />
 
-</shape>
+    </shape>
