--- a/workspace/WeAC/src/main/res/values/stytles_wea.xml
+++ b/workspace/WeAC/src/main/res/values/stytles_wea.xml
@@ -1,27 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="wea_font">
-        <item name="android:textColor">@color/white</item>
-        <item name="android:alpha">0.9</item>
-    </style>
-
     <style name="wea_degree">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:contentDescription">@null</item>
     </style>
 
     <style name="wea_prompt">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">3dp</item>
-        <item name="android:contentDescription">@null</item>
         <item name="android:drawablePadding">15dp</item>
         <item name="android:gravity">center</item>
         <item name="android:textSize">14sp</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="android:alpha">0.9</item>
+        <item name="android:textColor">@color/white_trans90</item>
     </style>
+
+    <style name="wea_forecast_llyt">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:orientation">vertical</item>
+    </style>
+
+    <style name="wea_forecast_title">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:textColor">@color/white_trans90</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="wea_forecast_content_llyt">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:padding">5dp</item>
+    </style>
+
+    <style name="wea_forecast_content_iv">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="wea_forecast_content_degree_rlyt">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">38dp</item>
+        <item name="android:layout_marginLeft">10dp</item>
+    </style>
+
+    <style name="wea_forecast_content_degree_rlyt_tv">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/white_trans90</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="wea_forecast_content_detail">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/white_trans90</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="divider_line_wea">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">0.5dp</item>
+        <item name="android:background">@color/white_trans20</item>
+    </style>
+
+    <style name="divider_line_wea_vertical">
+        <item name="android:layout_width">0.5dp</item>
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:background">@color/white_trans20</item>
+    </style>
+
 
 </resources>
