kaku chart finish

--- a/workspace/WeAC/src/main/res/values/color.xml
+++ b/workspace/WeAC/src/main/res/values/color.xml
@@ -67,5 +67,9 @@
     <!-- 深蓝色:录音详细分割线 -->
     <color name="blue_tog_btn">#397cbf</color>
     <!-- 深蓝色:toggleBtn -->
+    <color name="yellow_hot">#f9c000</color>
+    <!-- 暖黄色:白天气温 -->
+    <color name="blue_ice">#72abf8</color>
+    <!-- 冷蓝色:夜间气温 -->
 
 </resources>
