--- a/workspace/WeAC/src/main/res/values/stytles_wea.xml
+++ b/workspace/WeAC/src/main/res/values/stytles_wea.xml
@@ -79,5 +79,20 @@
         <item name="android:background">@color/white_trans20</item>
     </style>
 
+    <style name="wea_days_forecast_llyt">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:orientation">horizontal</item>
+    </style>
+
+    <style name="wea_days_forecast_tv_llyt">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/white_trans90</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
 
 </resources>
