--- a/workspace/WeAC/src/main/res/values/color.xml
+++ b/workspace/WeAC/src/main/res/values/color.xml
@@ -7,6 +7,8 @@
     <!-- 白色:10 -->
     <color name="white_trans20">#33ffffff</color>
     <!-- 白色:20 -->
+    <color name="white_trans40">#66ffffff</color>
+    <!-- 白色:20 -->
     <color name="white_trans60">#99FFFFFF</color>
     <!-- 白色:60 -->
     <color name="white_trans90">#e6ffffff</color>
