--- a/workspace/WeAC/src/main/res/values/stytles_wea.xml
+++ b/workspace/WeAC/src/main/res/values/stytles_wea.xml
@@ -79,19 +79,79 @@
         <item name="android:background">@color/white_trans20</item>
     </style>
 
+    <style name="wea_days_title_llyt">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">25dp</item>
+        <item name="android:layout_marginLeft">19dp</item>
+        <item name="android:layout_marginBottom">15dp</item>
+        <item name="android:orientation">horizontal</item>
+    </style>
+
+    <style name="wea_days_title_tv">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/white_trans90</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
     <style name="wea_days_forecast_llyt">
+        <item name="android:layout_marginTop">2dp</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:orientation">horizontal</item>
     </style>
 
-    <style name="wea_days_forecast_tv_llyt">
+    <style name="wea_days_forecast_tv">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_weight">1</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">center</item>
         <item name="android:textColor">@color/white_trans90</item>
         <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="wea_days_forecast_tv_trans">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/white_trans40</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+
+    <style name="wea_days_forecast_tv2">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/white_trans90</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
+    <style name="wea_days_forecast_tv2_trans">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/white_trans40</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
+    <style name="wea_days_forecast_iv">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="wea_days_forecast_iv_trans">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
+        <item name="android:alpha">0.4</item>
     </style>
 
 
