--- a/workspace/WeAC/src/main/res/values/color.xml
+++ b/workspace/WeAC/src/main/res/values/color.xml
@@ -15,6 +15,8 @@
     <!-- 白色:90 -->
     <color name="black">#000000</color>
     <!-- 黑色 -->
+    <color name="black_trans10">#1a000000</color>
+    <!-- 黑色: 15 -->
     <color name="black_trans15">#26000000</color>
     <!-- 黑色: 15 -->
     <color name="black_trans20">#33000000</color>
