set weather info5

--- a/workspace/WeAC/src/main/res/layout/fm_wea.xml
+++ b/workspace/WeAC/src/main/res/layout/fm_wea.xml
@@ -634,6 +634,7 @@
                         <TableRow>
 
                             <RelativeLayout
+                                android:id="@+id/wea_life_index_rlyt_umbrella"
                                 style="@style/wea_life_index_rlyt"
                                 >
 
@@ -645,7 +646,7 @@
                                 <TextView
                                     android:id="@+id/wea_life_index_tv_umbrella"
                                     style="@style/wea_life_index_tv_detail"
-                                    android:text="带伞"/>
+                                    android:text="无"/>
 
                                 <TextView
                                     style="@style/wea_life_index_tv_title"
@@ -655,6 +656,7 @@
                             </RelativeLayout>
 
                             <RelativeLayout
+                                android:id="@+id/wea_life_index_rlyt_ultraviolet_rays"
                                 style="@style/wea_life_index_rlyt"
                                 >
 
@@ -666,7 +668,7 @@
                                 <TextView
                                     android:id="@+id/wea_life_index_tv_ultraviolet_rays"
                                     style="@style/wea_life_index_tv_detail"
-                                    android:text="较强"/>
+                                    android:text="无"/>
 
                                 <TextView
                                     style="@style/wea_life_index_tv_title"
@@ -683,6 +685,7 @@
                         <TableRow>
 
                             <RelativeLayout
+                                android:id="@+id/wea_life_index_rlyt_dress"
                                 style="@style/wea_life_index_rlyt"
                                 >
 
@@ -694,7 +697,7 @@
                                 <TextView
                                     android:id="@+id/wea_life_tv_index_dress"
                                     style="@style/wea_life_index_tv_detail"
-                                    android:text="炎热"/>
+                                    android:text="无"/>
 
                                 <TextView
                                     style="@style/wea_life_index_tv_title"
@@ -704,6 +707,7 @@
                             </RelativeLayout>
 
                             <RelativeLayout
+                                android:id="@+id/wea_life_index_rlyt_cold"
                                 style="@style/wea_life_index_rlyt"
                                 >
 
@@ -715,7 +719,7 @@
                                 <TextView
                                     android:id="@+id/wea_life_index_tv_cold"
                                     style="@style/wea_life_index_tv_detail"
-                                    android:text="少发"/>
+                                    android:text="无"/>
 
                                 <TextView
                                     style="@style/wea_life_index_tv_title"
@@ -732,6 +736,7 @@
                         <TableRow>
 
                             <RelativeLayout
+                                android:id="@+id/wea_life_index_rlyt_morning_exercise"
                                 style="@style/wea_life_index_rlyt"
                                 >
 
@@ -743,7 +748,7 @@
                                 <TextView
                                     android:id="@+id/wea_life_index_tv_morning_exercise"
                                     style="@style/wea_life_index_tv_detail"
-                                    android:text="较不宜"/>
+                                    android:text="无"/>
 
                                 <TextView
                                     style="@style/wea_life_index_tv_title"
@@ -753,6 +758,7 @@
                             </RelativeLayout>
 
                             <RelativeLayout
+                                android:id="@+id/wea_life_index_rlyt_sport"
                                 style="@style/wea_life_index_rlyt"
                                 >
 
@@ -764,7 +770,7 @@
                                 <TextView
                                     android:id="@+id/wea_life_index_tv_sport"
                                     style="@style/wea_life_index_tv_detail"
-                                    android:text="不宜"/>
+                                    android:text="无"/>
 
                                 <TextView
                                     style="@style/wea_life_index_tv_title"
@@ -781,6 +787,7 @@
                         <TableRow>
 
                             <RelativeLayout
+                                android:id="@+id/wea_life_index_rlyt_carwash"
                                 style="@style/wea_life_index_rlyt"
                                 >
 
@@ -792,7 +799,7 @@
                                 <TextView
                                     android:id="@+id/wea_life_index_tv_car_wash"
                                     style="@style/wea_life_index_tv_detail"
-                                    android:text="不宜"/>
+                                    android:text="无"/>
 
                                 <TextView
                                     style="@style/wea_life_index_tv_title"
@@ -802,6 +809,7 @@
                             </RelativeLayout>
 
                             <RelativeLayout
+                                android:id="@+id/wea_life_index_rlyt_fish"
                                 style="@style/wea_life_index_rlyt"
                                 >
 
@@ -813,7 +821,7 @@
                                 <TextView
                                     android:id="@+id/wea_life_index_tv_fish"
                                     style="@style/wea_life_index_tv_detail"
-                                    android:text="不宜"/>
+                                    android:text="无"/>
 
                                 <TextView
                                     style="@style/wea_life_index_tv_title"
@@ -826,19 +834,6 @@
                     </TableLayout>
                 </FrameLayout>
             </LinearLayout>
-
-            <Button
-                android:id="@+id/read_wea"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="读取"/>
-
-            <TextView
-                android:id="@+id/wea_prompt_tv"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/black_trans50"
-                android:textColor="@color/white_trans90"/>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
