--- a/workspace/WeAC/src/main/res/values/color.xml
+++ b/workspace/WeAC/src/main/res/values/color.xml
@@ -16,11 +16,13 @@
     <color name="black">#000000</color>
     <!-- 黑色 -->
     <color name="black_trans10">#1a000000</color>
-    <!-- 黑色: 15 -->
+    <!-- 黑色: 10 -->
     <color name="black_trans15">#26000000</color>
     <!-- 黑色: 15 -->
     <color name="black_trans20">#33000000</color>
     <!-- 黑色: 20 -->
+    <color name="black_trans25">#40000000</color>
+    <!-- 黑色: 25 -->
     <color name="black_trans50">#80000000</color>
     <!-- 黑色：50 -->
     <color name="black_trans80">#CC000000</color>
