--- a/workspace/WeAC/src/main/res/drawable/shape_circle_week_off_normal.xml
+++ b/workspace/WeAC/src/main/res/drawable/shape_circle_week_off_normal.xml
@@ -5,5 +5,6 @@
     <stroke
         android:width="0.5dp"
         android:color="@color/gray_divider_line" />
+    <solid android:color="@color/gray_background_color" />
 
 </shape>
