runnable delayed cancel

--- a/workspace/WeAC/src/main/res/values/color.xml
+++ b/workspace/WeAC/src/main/res/values/color.xml
@@ -23,6 +23,8 @@
     <!-- 黑色: 20 -->
     <color name="black_trans25">#40000000</color>
     <!-- 黑色: 25 -->
+    <color name="black_trans30">#4d000000</color>
+    <!-- 黑色: 30 -->
     <color name="black_trans50">#80000000</color>
     <!-- 黑色：50 -->
     <color name="black_trans80">#CC000000</color>
