--- a/workspace/WeAC/src/main/res/values/color.xml
+++ b/workspace/WeAC/src/main/res/values/color.xml
@@ -27,6 +27,8 @@
     <!-- 黑色: 30 -->
     <color name="black_trans50">#80000000</color>
     <!-- 黑色：50 -->
+    <color name="black_trans70">#b3000000</color>
+    <!-- 黑色：70 -->
     <color name="black_trans80">#CC000000</color>
     <!-- 黑色：80 -->
     <color name="black_trans90">#E6000000</color>
