--- a/workspace/WeAC/src/main/res/values/styles.xml
+++ b/workspace/WeAC/src/main/res/values/styles.xml
@@ -45,6 +45,7 @@
         <item name="android:background">@drawable/bg_action_bar_button</item>
         <item name="android:paddingLeft">15dp</item>
         <item name="android:paddingRight">15dp</item>
+        <item name="android:layout_gravity">center</item>
     </style>
 
     <style name="action_tv">
