--- a/workspace/WeAC/src/main/res/values/stytles_wea.xml
+++ b/workspace/WeAC/src/main/res/values/stytles_wea.xml
@@ -44,12 +44,14 @@
     <style name="wea_forecast_content_iv">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
         <item name="android:src">@drawable/ic_weather_no</item>
     </style>
 
     <style name="wea_forecast_content_degree_rlyt">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">38dp</item>
+        <item name="android:layout_gravity">center</item>
         <item name="android:layout_marginLeft">10dp</item>
     </style>
 
